<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springblade</groupId>
        <artifactId>iot_bladex</artifactId>
        <version>4.9.0.RELEASE</version>
    </parent>

    <artifactId>blade-server</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <module.name>blade.server</module.name>
    </properties>

    <dependencies>

        <!-- ===== 1. BladeX 基础模块 ===== -->
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>blade-common</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>blade-api</artifactId>
        </dependency>

        <!-- ===== 2. NVR 视频平台公共模块 ===== -->
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-common</artifactId>
        </dependency>

        <!-- ===== 3. IOT 物联网核心模块 ===== -->
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>module-iot-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>module-iot-biz</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>iot-common-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>iot-common-thing</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>iot-component-core</artifactId>
        </dependency>

        <!-- ===== 4. NVR 各厂商 API 模块 ===== -->
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-dahua</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-gb28181</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-haikang</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-haikang-isup</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-jt1078</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-onvif</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-qs</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-api-zlm</artifactId>
        </dependency>

        <!-- ===== 5. NVR 协议底层实现模块 ===== -->
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-protocol-qs</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-protocol-haikang-isup</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springblade</groupId>
            <artifactId>nvr-protocol-zlm</artifactId>
        </dependency>

        <!-- ===== 6. Redisson 分布式锁/队列（规则引擎使用） ===== -->
        <dependency>
            <groupId>org.redisson</groupId>
            <artifactId>redisson</artifactId>
            <version>3.27.2</version>
        </dependency>

        <!-- ===== 7. Spring Boot Data Redis（Blade 框架的 RedisTemplateConfiguration 需要 RedisTemplate bean） ===== -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

    </dependencies>

    <build>
        <finalName>${bladex.project.id}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.2.10</version>
                    <configuration>
                        <finalName>${project.build.finalName}</finalName>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>io.fabric8</groupId>
                    <artifactId>docker-maven-plugin</artifactId>
                    <version>${docker.fabric.version}</version>
                    <configuration>
                        <authConfig>
                            <username>${docker.username}</username>
                            <password>${docker.password}</password>
                        </authConfig>
                        <registry>${docker.registry.url}</registry>
                        <images>
                            <image>
                                <name>blade-server</name>
                                <alias>${project.name}</alias>
                                <build>
                                    <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                </build>
                            </image>
                        </images>
                        <buildArgs>
                            <JAR_FILE>${basedir}/target/${project.build.finalName}.jar</JAR_FILE>
                        </buildArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
